using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class GameDefine 
{
    public static string TAG_GROUND = "Ground";
    public static string TAG_LADDER = "Ladder";

    public static string FOX_CROUCH = "Crouch";
    public static string FOX_IDLE = "Idle";
    public static string FOX_CLIMB = "Climb";
    public static string FOX_VECY = "VecY";
}
